--- a/babo/index.html
+++ b/babo/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-    <title>$BABO</title>
-    <meta property="og:title" content="Join the BABO Family - $BABO" />
+    <title>$BAO</title>
+    <meta property="og:title" content="Join the BAO Family - $BAO" />
     <meta
       property="og:description"
-      content="Meet $BABO, the cosmic frog born from a dead star explosion! Join our community of space explorers and be part of something extraordinary!"
+      content="Meet $BAO, the cosmic frog born from a dead star explosion! Join our community of space explorers and be part of something extraordinary!"
     />
     <meta property="og:image" content="main.png" />
     <meta property="og:image:secure_url" content="main.png" />
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:alt" content="BABO - The Cosmic Frog" />
+    <meta property="og:image:alt" content="BAO - The Cosmic Frog" />
     <meta property="og:url" content="" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="BABO Coin" />
+    <meta property="og:site_name" content="BAO Coin" />
     <meta property="og:locale" content="en_US" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link
@@ -64,25 +64,25 @@
         <nav class="navbar-section" style="margin-top: 0; padding-top: 0">
           <div class="flex gap-6 justify-center">
             <a
-              href="https://x.com/babo_solana"
+              href="https://x.com/bao_on_solana"
               target="_blank"
               rel="noopener"
               class="nav-link"
               >X</a
             >
             <a
-              href="https://x.com/i/communities/1943738781070241950"
+              href="https://x.com/bao_on_solana"
               target="_blank"
               rel="noopener"
               class="nav-link"
               >Community</a
             >
             <a
-              href="https://dexscreener.com/solana/"
+              href="https://pump.fun/coin/3W5qCB5C21HK9CDysogPehYJYnYJTdHJMchJzaKUpump"
               target="_blank"
               rel="noopener"
               class="nav-link"
-              >DEX</a
+              >PUMP</a
             >
           </div>
         </nav>
@@ -99,7 +99,7 @@
               color: #fff;
             "
           >
-            BABO
+            BAO
           </h1>
         </div>
         <!-- Centered Logo -->
@@ -199,7 +199,7 @@
             target="_blank"
             rel="noopener"
             class="btn-buy"
-            >BUY $BABO</a
+            >BUY $BAO</a
           >
         </div>
       </div>
