--- a/babo/index.html
+++ b/babo/index.html
@@ -211,7 +211,7 @@
         <footer
           class="w-full py-6 backdrop-blur text-center text-gray-400 text-sm mt-10 shadow-inner"
         >
-          &copy; 2025 BABO. All rights reserved.
+          &copy; 2025 BAO. All rights reserved.
         </footer>
       </div>
     </div>
